# aws-regions

./: .gitignore  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  aws-regions.changes  aws-regions.spec  python-aws-regions.changes  python-aws-regions.spec  python3-aws-regions.changes  python3-aws-regions.spec  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/actions/webhook2/: Dockerfile  action.yml
.github/workflows/: ci.yml  obs-publish.yml
.obs/: workflows.yml
aws_regions/: __init__.py  config.py  endpoints.py
tests/: test_config.py  test_endpoints.py
tests/cassettes/: get_all_regions.yml
tests/data/: test.config
