[bumpversion]
current_version = 0.5.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:aws_regions/__init__.py]

[bumpversion:file:python-aws-regions.spec]

[tool:pytest]
norecursedirs = data
testpaths = tests

[flake8]
exclude = data

[coverage:report]
fail_under = 100

[metadata]
license_file = LICENSE
